se modifico el css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container">
         <header class="header">
-            <h1>PetShop Nany</h1>
+                <h1>PetShop Nany</h1>
             <nav>
                 <ul>
                   <li><a href="index.html">Home</a></li>
@@ -94,8 +94,8 @@
         </div>
 
         <footer class="footer">
-            <h4>petshop Nany</h4>
-            <p>Manavella Belen.</p>
+            <h4>PetShop Nany</h4>
+            <p>Manavella Maria Belen.</p> <span>Todos los derechos reservados </span>
         </footer>
 
     </div>
