--- a/nosotros.html
+++ b/nosotros.html
@@ -89,8 +89,8 @@
         </div>
 
         <footer class="footer">
-            <h4>petshop Nany</h4>
-            <p>Manavella Belen.</p>
+            <h4>PetShop Nany</h4>
+            <p>Manavella Maria Belen.</p> <span class="derechos">Todos los derechos reservados </span>
         </footer>
 
     </div>
