--- a/tienda.html
+++ b/tienda.html
@@ -29,51 +29,51 @@
 
         <div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 1">
                 <button class="btn">Comprar</button>
             </div>
         </div>
         <div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 2">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 3">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 4">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 5">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 6">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 7">
                 <button class="btn">Comprar</button>
             </div>
         </div><div class="related-post">
             <div class="container2 nbt">
-                <img src="img/dog3.jpg" alt="Snow">
+                <img src="img/dog3.jpg" alt="imagen perrito 8">
                 <button class="btn">Comprar</button>
             </div>
         </div>
        
 
         <footer class="footer">
-            <h4>petshop Nany</h4>
-            <p>Manavella Belen.</p>
+            <h4>PetShop Nany</h4>
+            <p>Manavella Maria Belen.</p> <span class="derechos">Todos los derechos reservados </span>
         </footer>
 
     </div>
